syntax = "proto3";

package protoim;

option go_package = "./;protoim";

// 聊天类型
enum ChatType {
    CT_USE   = 0; // 私聊
    CT_GROUP = 1; // 群聊
}
