syntax = "proto3";

package protoim;

option go_package = "./;protoim";

import "error_type.proto";

// 错误信息
message ErrorBase {
    protoim.ErrorType code = 1;
    string msg = 2;
}