syntax = "proto3";

package protoim;

option go_package = "./;protoim";

// 获取好友列表-请求
message GetFriendsRequest {
}
