syntax = "proto3";

package protoim;

option go_package = "./;protoim";

import "user_info.proto";

// 获取好友列表-响应
message GetFriendsResponse {
    repeated protoim.UserInfo users = 1;
}
