syntax = "proto3";

package protoim;

option go_package = "./;protoim";

// 获取用户信息-请求
message GetUserRequest {
  string user_id = 1;
}
