syntax = "proto3";

package protoim;

option go_package = "./;protoim";

import "user_info.proto";

// 获取用户信息-响应
message GetUserResponse {
  protoim.UserInfo user = 1;
}