syntax = "proto3";

package protoim;

option go_package = "./;protoim";

import 'chat_type.proto';
import 'message_type.proto';
import 'message_entity_uri.proto';
import 'message_media.proto';

// 消息相关(客户端发送-服务端接收)-请求
message MessageRequest {
  string conversation_id = 1; // 会话ID( {user_id}_{chat_type}_{to_id} )
  string local_msg_id = 2; // 客户端本地的消息ID(用于客户校验)(客户端生成)
  string from_id      = 3; // 发送者(用户ID)
  string to_id        = 4; // 接收者(用户ID/群ID)
  protoim.ChatType chat_type_id       = 5; // 私聊还是群聊
  protoim.MessageType message_type_id = 6; // 消息类型
  string content      = 7; // 消息的内容
  protoim.MessageEntityUri entity = 8; // 对消息内容需要做跳转的转换 (如：url 地址)
  protoim.MessageMedia media      = 9; // 消息媒体 (图片、文件、语音文件、视频文件)
  protoim.MessageMedia thumbnail  = 10; // 缩略图
}
