syntax = "proto3";

package protoim;

option go_package = "./;protoim";

import "update_friend.proto";

// 更新好友相关信息(只有服务端的推送)如：添加好友、删除好友、好友修改呢称|头像
message UpdateFriends {
  repeated protoim.UpdateFriend users = 1;
}
