syntax = "proto3";

package protoim;

option go_package = "./;protoim";

// 用户信息
message UserInfo {
  string user_id   = 1;
  string nick_name = 2;
  string avatar    = 3;
  int32  age       = 4;
}