syntax = "proto3";

package protoim;

option go_package = "./;protoim";

message UserLoginRequest {
  int32  uid  = 1;
  string name = 2;
}
