syntax = "proto3";

package protoim;

option go_package = "./;protoim";

// 用户登录-响应
message UserLoginResponse {
  string user_id   = 1;
  string nick_name = 2;
}
